--- a/src/app/layout/pages/home/home.component.html
+++ b/src/app/layout/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="content">
+  <div class="content" (click)="openGoogleMaps()">
     <button class="main-button" [routerLink]="['planning']">
       Ils se marient !
     </button>
