--- a/src/app/layout/pages/planning/planning.component.html
+++ b/src/app/layout/pages/planning/planning.component.html
@@ -2,72 +2,70 @@
   <div class="planning-items">
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">02/09/2022 - 18:00</div>
+      <div class="planning-date">Vendredi 2 Septembre 2022</div>
       <div class="planning-content">
-        <h3>Manoir de la Perdrilais de Pipriac</h3>
-        <p>
-          Accueil des invités
-        </p>
+        <div class="planning-content-text">
+          <h3>Manoir de la Perdrilais de Pipriac</h3>
+          <p>
+            <span class="zmdi zmdi-check"></span>18:00 - Accueil des invités
+          </p>
+        </div>
+        <div class="planning-content-image manoir"></div>
       </div>
     </div>
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">03/09/2022 - 14:00</div>
+      <div class="planning-date">Samedi 3 Septembre 2022</div>
       <div class="planning-content">
-        <h3>Presbytère de Saint-Briac-sur-Mer</h3>
-        <p>
-          Cérémonie civile
-        </p>
+        <div class="planning-content-text">
+          <h3>Presbytère de Saint-Briac-sur-Mer</h3>
+          <p>
+            <span class="zmdi zmdi-check"></span>14:00 - Cérémonie civile
+          </p>
+        </div>
+        <div class="planning-content-image presbytere"></div>
       </div>
     </div>
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">03/09/2022 - 16:00</div>
+      <div class="planning-date">Samedi 3 Septembre 2022</div>
       <div class="planning-content">
-        <h3>Manoir de la Perdrilais de Pipriac</h3>
-        <p>
-          Cérémonie laïque
-        </p>
+        <div class="planning-content-text">
+          <h3>Manoir de la Perdrilais de Pipriac</h3>
+          <p>
+            <span class="zmdi zmdi-car"></span>45 minutes<br/>
+            <span class="zmdi zmdi-check"></span>16:00 - Cérémonie laïque<br/>
+            <span class="zmdi zmdi-check"></span>17:00 - Cocktail<br/>
+            <span class="zmdi zmdi-check"></span>20:00 - Dîner
+          </p>
+        </div>
+        <div class="planning-content-image manoir"></div>
       </div>
     </div>
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">03/09/2022 - 17:00</div>
+      <div class="planning-date">Dimanche 4 Septembre 2022</div>
       <div class="planning-content">
+        <div class="planning-content-text">
         <h3>Manoir de la Perdrilais de Pipriac</h3>
         <p>
-          Cocktail
+          <span class="zmdi zmdi-check"></span>12:00 - Brunch, Olympiades & Pool party
         </p>
+        </div>
+        <div class="planning-content-image manoir"></div>
       </div>
     </div>
     <div class="planning-item">
       <div class="planning-dot"></div>
-      <div class="planning-date">03/09/2022 - 20:00</div>
+      <div class="planning-date">Lundi 5 Septembre 2022</div>
       <div class="planning-content">
+        <div class="planning-content-text">
         <h3>Manoir de la Perdrilais de Pipriac</h3>
         <p>
-          Dîner
+          <span class="zmdi zmdi-check"></span>09:00 - Détente jusqu'à 12 heures
         </p>
-      </div>
-    </div>
-    <div class="planning-item">
-      <div class="planning-dot"></div>
-      <div class="planning-date">04/09/2022 - 12:00</div>
-      <div class="planning-content">
-        <h3>Manoir de la Perdrilais de Pipriac</h3>
-        <p>
-          Brunch, Olympiades & Pool party
-        </p>
-      </div>
-    </div>
-    <div class="planning-item">
-      <div class="planning-dot"></div>
-      <div class="planning-date">05/09/2022 - 09:00</div>
-      <div class="planning-content">
-        <h3>Manoir de la Perdrilais de Pipriac</h3>
-        <p>
-          Détente jusqu'à 12 heures
-        </p>
+        </div>
+        <div class="planning-content-image manoir"></div>
       </div>
     </div>
   </div>
