--- a/src/app/layout/pages/covoiturages/covoiturages.component.scss
+++ b/src/app/layout/pages/covoiturages/covoiturages.component.scss
@@ -1,4 +1,66 @@
 section {
-    background-color: #383838;
-    min-height: calc(100vh - 72px);
+  background-color: #fff;
+  min-height: calc(100vh - 72px);
+  padding: 20px;
+  .covoiturage-div {
+    min-height: 100px;
+    background-color: #fff;
+    border: 1px solid #006338;
+    margin: 0px auto 20px auto;
+    color: #006338;
+    display: flex;
+    min-height: 150px;
+    @media (min-width: 769px) {
+      flex-direction: row;
+    }
+    @media (max-width: 769px) {
+      min-height: 300px;
+      flex-direction: column-reverse;
+    }
+    .covoiturage-div-text {
+      padding: 20px;
+      min-width: 50%;
+
+      h3 {
+        color: #006338;
+        margin: 0 0 5px;
+        font-size: 18px;
+        font-family: "EB Garamond", serif;
+      }
+    }
+    .covoiturage-div-image {
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      @media (min-width: 769px) {
+      }
+      @media (max-width: 768px) {
+        min-height: 60%;
+      }
+      flex-grow: 1;
+      &.lyon {
+        background-image: radial-gradient(
+            ellipse at center,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(0, 0, 0, 0) 23%,
+            rgba(0, 0, 0, 0.65) 100%
+          ),
+          url("/assets/lyon.jpg");
+      }
+      &.manoir {
+        background-image: radial-gradient(
+            ellipse at center,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(0, 0, 0, 0) 23%,
+            rgba(0, 0, 0, 0.65) 100%
+          ),
+          url("/assets/manoir.jpg");
+      }
+    }
+  }
+}
+.only-mobile {
+  @media screen and (min-width: 426px) {
+    display: none;
+  }
 }
