--- a/src/app/layout/pages/covoiturages/covoiturages.component.scss
+++ b/src/app/layout/pages/covoiturages/covoiturages.component.scss
@@ -5,8 +5,10 @@ section {
   .covoiturage-div {
     min-height: 100px;
     background-color: #fff;
-    border: 1px solid #006338;
-    margin: 0px auto 20px auto;
+    border: 2px solid #006338;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin: 0px auto 30px auto;
     color: #006338;
     display: flex;
     min-height: 150px;
