--- a/src/app/layout/pages/page-secrete/page-secrete.component.html
+++ b/src/app/layout/pages/page-secrete/page-secrete.component.html
@@ -1,1 +1,14 @@
-<p>page-secrete works!</p>
+<section>
+  <div class="inner-border">
+    <h1>LOREM MES</h1>
+    <p>
+        Blabla mes couilles, trop lolilol very fun tu sauras pas ce que c'est le message
+    </p>
+    <p>
+        La putain de ses morts, wallah t'auras rien, c'est comme ça c'est comme ci
+    </p>
+    <p>
+        Tu l'as cru, oui oui oui
+    </p>
+  </div>
+</section>
