--- a/src/app/layout/pages/covoiturages/covoiturages.component.scss
+++ b/src/app/layout/pages/covoiturages/covoiturages.component.scss
@@ -1,68 +1,92 @@
-section {
+.covoiturages-section {
   background-color: #fff;
-  min-height: calc(100vh - 72px);
+  min-height: calc(100vh - 112px);
   padding: 20px;
-  .covoiturage-div {
-    min-height: 100px;
-    background-color: #fff;
-    border: 2px solid #006338;
-    border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    margin: 0px auto 30px auto;
+  .ville {
+    font-size: 18px;
     color: #006338;
-    display: flex;
-    min-height: 150px;
-    @media (min-width: 769px) {
-      flex-direction: row;
-    }
-    @media (max-width: 769px) {
-      min-height: 300px;
-      flex-direction: column-reverse;
-    }
-    .covoiturage-div-text {
-      padding: 20px;
-      min-width: 50%;
-
+    font-weight: bold;
+    font-size: 26px;
+    margin: -2px 0 15px;
+    font-family: "Tangerine", cursive;
+  }
+  .covoiturages-items {
+    display: grid;
+    grid-gap: 30px;
+    .covoiturages-item {
+      min-height: 210px;
       h3 {
-        color: #006338;
-        margin: 0 0 5px;
-        font-size: 18px;
+        display: flex;
+        text-align: center;
         font-family: "EB Garamond", serif;
+        margin: 0;
+        background-color: #fff;
+        border-bottom: 3px solid #006338;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        font-weight: 500;
+        padding: 7px 0px;
+        color: #006338;
+        span {
+          width: 100%;
+          align-self: center;
+          padding: 0px 5px;
+          &.date {
+            font-size: 11px;
+            text-align: left;
+          }
+          &.passengers {
+            font-size: 11px;
+            text-align: right;
+          }
+        }
       }
-    }
-    .covoiturage-div-image {
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      @media (min-width: 769px) {
+      .covoiturages-item-image {
+        &.lyon {
+          background-image: url("/assets/lyon.jpg");
+        }
+        /*&.creperie-hermine {
+          background-image: url("/assets/creperie-hermine-hover.jpg");
+        }
+        &.table-bechet {
+          background-image: url("/assets/table-bechet-hover.jpg");
+        }
+        &.rusty {
+          background-image: url("/assets/rusty-hover.jpg");
+        }
+        &.surf-josephine {
+          background-image: url("/assets/surf-josephine-hover.jpg");
+        }
+        &.bistrot-houle {
+          background-image: url("/assets/bistrot-houle-hover.jpg");
+        }
+        &.ville-carree {
+          background-image: url("/assets/ville-carree-hover.jpg");
+        }*/
+        /* Set a specific height */
+        height: calc(100% - 27px);
+        /* Position and center the image to scale nicely on all screens */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
       }
-      @media (max-width: 768px) {
-        min-height: 60%;
-      }
-      flex-grow: 1;
-      &.lyon {
-        background-image: radial-gradient(
-            ellipse at center,
-            rgba(0, 0, 0, 0) 0%,
-            rgba(0, 0, 0, 0) 23%,
-            rgba(0, 0, 0, 0.65) 100%
-          ),
-          url("/assets/lyon.jpg");
-      }
-      &.manoir {
-        background-image: radial-gradient(
-            ellipse at center,
-            rgba(0, 0, 0, 0) 0%,
-            rgba(0, 0, 0, 0) 23%,
-            rgba(0, 0, 0, 0.65) 100%
-          ),
-          url("/assets/manoir.jpg");
+      &:hover {
+        cursor: pointer;
       }
     }
   }
 }
-.only-mobile {
-  @media screen and (min-width: 426px) {
-    display: none;
+/* Screen larger than 600px? 2 column */
+@media (min-width: 600px) {
+  .covoiturages-items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Screen larger than 900px? 3 columns */
+@media (min-width: 900px) {
+  .covoiturages-items {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
