--- a/src/app/layout/pages/home/home.component.scss
+++ b/src/app/layout/pages/home/home.component.scss
@@ -1,12 +1,6 @@
 section {
     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: radial-gradient(
-    ellipse at center,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0) 23%,
-    rgba(0, 0, 0, 0.65) 100%
-  ),
-  url("/assets/manoir.jpg");
+  background-image: url("/assets/manoir.jpg");
 /* Set a specific height */
 height: calc(100% - 72px);
 /* Position nd center the image to scale nicely on all screens */
