--- a/src/app/layout/pages/logements/logements.component.scss
+++ b/src/app/layout/pages/logements/logements.component.scss
@@ -12,69 +12,32 @@
         font-family: "EB Garamond", serif;
         margin: 0;
         background-color: #fff;
-        border: 2px solid #006338;
-        border-top: none;
+        border-bottom: 3px solid #006338;
+        color: #006338;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-                font-weight: 500;
+        font-weight: 500;
         padding: 7px 0px;
-        color: #006338;
       }
       .logements-item-image {
         &.rives-nature {
-          background-image: radial-gradient(
-              ellipse at center,
-              rgba(0, 0, 0, 0) 0%,
-              rgba(0, 0, 0, 0) 23%,
-              rgba(0, 0, 0, 0.65) 100%
-            ),
-            url("/assets/rives-nature-hover.jpg");
+          background-image: url("/assets/rives-nature-hover.jpg");
         }
         &.relais-des-arcandiers {
-          background-image: radial-gradient(
-              ellipse at center,
-              rgba(0, 0, 0, 0) 0%,
-              rgba(0, 0, 0, 0) 23%,
-              rgba(0, 0, 0, 0.65) 100%
-            ),
-            url("/assets/relais-des-arcandiers-hover.jpg");
+          background-image: url("/assets/relais-des-arcandiers-hover.jpg");
         }
         &.chambre-hotes-cahardet {
-          background-image: radial-gradient(
-              ellipse at center,
-              rgba(0, 0, 0, 0) 0%,
-              rgba(0, 0, 0, 0) 23%,
-              rgba(0, 0, 0, 0.65) 100%
-            ),
-            url("/assets/chambre-hotes-cahardet-hover.jpg");
+          background-image: url("/assets/chambre-hotes-cahardet-hover.jpg");
         }
         &.gite-des-hirondelles {
-          background-image: radial-gradient(
-              ellipse at center,
-              rgba(0, 0, 0, 0) 0%,
-              rgba(0, 0, 0, 0) 23%,
-              rgba(0, 0, 0, 0.65) 100%
-            ),
-            url("/assets/gite-des-hirondelles-hover.jpg");
+          background-image: url("/assets/gite-des-hirondelles-hover.jpg");
         }
         &.clos-du-chene {
-          background-image: radial-gradient(
-              ellipse at center,
-              rgba(0, 0, 0, 0) 0%,
-              rgba(0, 0, 0, 0) 23%,
-              rgba(0, 0, 0, 0.65) 100%
-            ),
-            url("/assets/clos-du-chene-hover.jpg");
+          background-image: url("/assets/clos-du-chene-hover.jpg");
         }
         &.chateau-du-brossay {
-          background-image: radial-gradient(
-              ellipse at center,
-              rgba(0, 0, 0, 0) 0%,
-              rgba(0, 0, 0, 0) 23%,
-              rgba(0, 0, 0, 0.65) 100%
-            ),
-            url("/assets/chateau-du-brossay-hover.jpg");
+          background-image: url("/assets/chateau-du-brossay-hover.jpg");
         }
         /* Set a specific height */
         height: calc(100% - 27px);
@@ -85,28 +48,6 @@
       }
       &:hover {
         cursor: pointer;
-        h3 {
-          background-color: #b36700;
-          color: #ffffd4;
-        }
-        .rives-nature {
-          background-image: url("/assets/rives-nature-hover.jpg");
-        } 
-        .relais-des-arcandiers {
-          background-image: url("/assets/relais-des-arcandiers-hover.jpg");
-        }
-        .chambre-hotes-cahardet {
-          background-image: url("/assets/chambre-hotes-cahardet-hover.jpg");
-        }
-        .gite-des-hirondelles {
-          background-image: url("/assets/gite-des-hirondelles-hover.jpg");
-        }
-        .clos-du-chene {
-          background-image: url("/assets/clos-du-chene-hover.jpg");
-        }
-        .chateau-du-brossay {
-          background-image: url("/assets/chateau-du-brossay-hover.jpg");
-        }
       }
     }
   }
