--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -15,6 +15,11 @@
           >
         </li>
         <li>
+          <a [routerLink]="['/activités']" routerLinkActive="active">
+            Activités
+          </a>
+        </li>
+        <li>
           <a [routerLink]="['/restaurants']" routerLinkActive="active"
             >Restaurants</a
           >
@@ -37,6 +42,11 @@
         <li>
           <a [routerLink]="['/covoiturages']" routerLinkActive="active">
             <span class="zmdi zmdi-car-taxi"></span>
+          </a>
+        </li>
+        <li>
+          <a [routerLink]="['/activités']" routerLinkActive="active">
+            <span class="zmdi zmdi-map"></span>
           </a>
         </li>
         <li>
