--- a/src/app/layout/pages/covoiturages/covoiturages.component.scss
+++ b/src/app/layout/pages/covoiturages/covoiturages.component.scss
@@ -1,14 +1,59 @@
-.covoiturages-section {
+.set-mail {
+  height: calc(100% - 72px);
   background-color: #fff;
-  min-height: calc(100vh - 112px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .set-mail-div {
+    border-radius: 5px;
+    text-align: center;
+    h3 {
+      text-align: center;
+      margin-top: 0;
+      text-align: center;
+      font-family: "EB Garamond", serif;
+      color: #006338;
+      font-weight: 500;
+    }
+    input {
+      width: 100%;
+    }
+    button {
+      margin-top: 15px;
+      padding: 7px 25px;
+      background-color: #006338;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+    @media (max-width: 425px) {
+      padding: 15px;
+    }
+    @media (max-width: 768px) {
+      padding: 40px;
+    }
+    @media (min-width: 769px) {
+      padding: 60px;
+    }
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+}
+
+.main {
+  min-height: calc(100% - 112px);
   padding: 20px;
-  .ville {
-    font-size: 18px;
+  h3 {
+    text-align: left;
+    @media (max-width: 425px) {
+      text-align: center;
+    }
+    margin-top: 35px;
+    font-family: "EB Garamond", serif;
     color: #006338;
-    font-weight: bold;
-    font-size: 26px;
-    margin: -2px 0 15px;
-    font-family: "Tangerine", cursive;
+    font-weight: 500;
+    &:first-child {
+      margin-top:0
+    }
   }
   .covoiturages-items {
     display: grid;
@@ -16,7 +61,6 @@
     .covoiturages-item {
       min-height: 210px;
       h3 {
-        display: flex;
         text-align: center;
         font-family: "EB Garamond", serif;
         margin: 0;
@@ -28,42 +72,19 @@
         font-weight: 500;
         padding: 7px 0px;
         color: #006338;
-        span {
-          width: 100%;
-          align-self: center;
-          padding: 0px 5px;
-          &.date {
-            font-size: 14px;
-            text-align: left;
-          }
-          &.passengers {
-            font-size: 14px;
-            text-align: right;
-          }
-        }
       }
-      .covoiturages-item-image {
-        &.lyon {
+      .covoiturage-item-image {
+        background-color: #cacaca;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .zmdi {
+          font-size: 30px;
+          color: #006338;
+        }
+        &.Lyon {
           background-image: url("/assets/lyon.jpg");
         }
-        /*&.creperie-hermine {
-          background-image: url("/assets/creperie-hermine-hover.jpg");
-        }
-        &.table-bechet {
-          background-image: url("/assets/table-bechet-hover.jpg");
-        }
-        &.rusty {
-          background-image: url("/assets/rusty-hover.jpg");
-        }
-        &.surf-josephine {
-          background-image: url("/assets/surf-josephine-hover.jpg");
-        }
-        &.bistrot-houle {
-          background-image: url("/assets/bistrot-houle-hover.jpg");
-        }
-        &.ville-carree {
-          background-image: url("/assets/ville-carree-hover.jpg");
-        }*/
         /* Set a specific height */
         height: calc(100% - 27px);
         /* Position and center the image to scale nicely on all screens */
@@ -77,6 +98,7 @@
     }
   }
 }
+
 /* Screen larger than 600px? 2 column */
 @media (min-width: 600px) {
   .covoiturages-items {
