--- a/src/app/layout/pages/planning/planning.component.html
+++ b/src/app/layout/pages/planning/planning.component.html
@@ -20,6 +20,7 @@
         <div class="planning-content-text">
           <h3>Presbytère de Saint-Briac-sur-Mer</h3>
           <p>
+            <span class="zmdi zmdi-car"></span>1h20 minutes<br/>
             <span class="zmdi zmdi-check"></span>14:00 - Cérémonie civile
           </p>
         </div>
@@ -33,7 +34,7 @@
         <div class="planning-content-text">
           <h3>Manoir de la Perdrilais de Pipriac</h3>
           <p>
-            <span class="zmdi zmdi-car"></span>45 minutes<br/>
+            <span class="zmdi zmdi-car"></span>1h20 minutes<br/>
             <span class="zmdi zmdi-check"></span>16:00 - Cérémonie laïque<br/>
             <span class="zmdi zmdi-check"></span>17:00 - Cocktail<br/>
             <span class="zmdi zmdi-check"></span>20:00 - Dîner
