--- a/src/app/layout/pages/activites/activites.component.html
+++ b/src/app/layout/pages/activites/activites.component.html
@@ -1,44 +1,38 @@
 <section #test class="activites-section">
-  <div>
-    <div>
-      <carousel
-        [images]="circuit1"
-        [height]="carouselHeight"
-        [dots]="true"
-        cellWidth="100%"
-      ></carousel>
-      <h3>
-        Circuit 1 <br />
-        <small>Les menhirs de Monteneuf, La fôret de Brocéliande</small>
-      </h3>
-    </div>
+  <div class="navigation-carousel">
+    <button (click)="activateCarousel1()" [class.active]="this.carousel1active">Circuit 1</button>
+    <button (click)="activateCarousel2()" [class.active]="this.carousel2active">Circuit 2</button>
+    <button (click)="activateCarousel3()" [class.active]="this.carousel3active">Les plages</button>
   </div>
-  <div>
-    <div>
-      <carousel
-        [images]="circuit2"
-        [height]="carouselHeight"
-        [dots]="true"
-        cellWidth="100%"
-      ></carousel>
-      <h3>
-        Circuit 2 <br />
-        <small>Bécherel, Saint-Suliac, Côte d'Emeraude</small>
-      </h3>
-    </div>
-  </div>
-  <div>
-    <div>
-      <carousel
-        [images]="plages"
-        [height]="carouselHeight"
-        [dots]="true"
-        cellWidth="100%"
-      ></carousel>
-      <h3>
-        Les plages <br />
-        <small>Dinard, Saint-Lunaire, Saint-Briac, Lancieux</small>
-      </h3>
-    </div>
+  <div class="carousel-wrapper">
+    <carousel *ngIf="this.carousel1active"
+      [images]="circuit1"
+      [height]="carouselHeight"
+      [dots]="true"
+      cellWidth="100%"
+    ></carousel>
+    <carousel *ngIf="this.carousel2active"
+      [images]="circuit2"
+      [height]="carouselHeight"
+      [dots]="true"
+      cellWidth="100%"
+    ></carousel>
+    <carousel *ngIf="this.carousel3active"
+      [images]="plages"
+      [height]="carouselHeight"
+      [dots]="true"
+      cellWidth="100%"
+    ></carousel>
+    <h3>
+      {{this.carousel1active ? 'Circuit 1' : ''}}
+      {{this.carousel2active ? 'Circuit 2' : ''}}
+      {{this.carousel3active ? 'Les plages' : ''}}
+      <br />
+      <small>
+        {{this.carousel1active ? 'Les menhirs de Monteneuf, La fôret de Brocéliande' : ''}}
+        {{this.carousel2active ? 'Bécherel, Saint-Suliac, Côte Emeraude' : ''}}
+        {{this.carousel3active ? 'Dinard, Saint-Lunaire, Saint-Briac, Lancieux' : ''}}
+      </small>
+    </h3>
   </div>
 </section>
