--- a/src/app/layout/pages/activites/activites.component.scss
+++ b/src/app/layout/pages/activites/activites.component.scss
@@ -1,14 +1,29 @@
 .activites-section {
   background-color: fff;
   padding: 20px;
-  min-height: calc(100vh - 72px);
-  div {
+  min-height: calc(100vh - 112px);
+  .navigation-carousel {
+    button {
+      margin-right: 10px;
+      background-color: transparent;
+      border:none;
+      color: #006338;
+      padding: 7px 15px;
+      cursor: pointer;
+      &.active {
+        background-color: #006338;
+        color: #fff;
+      }
+    }
+  }
+  .carousel-wrapper {
+    padding: 0 5px;
     h3 {
       text-align: center;
       font-family: "EB Garamond", serif;
       margin: 0;
       background-color: #fff;
-      border-bottom: 3px solid #006338;
+      border-bottom: 3px solid #b36700;
       color: #006338;
       border-bottom-left-radius: 5px;
       border-bottom-right-radius: 5px;
