--- a/src/app/layout/pages/planning/planning.component.scss
+++ b/src/app/layout/pages/planning/planning.component.scss
@@ -49,7 +49,7 @@
 }
 .planning-content {
   background-color: #fff;
-  border-bottom: 3px solid #006338;
+  border-bottom: 3px solid #b36700;
   display: flex;
   min-height: 300px;
   border-radius: 5px;
