--- a/src/app/layout/pages/restaurants/restaurants.component.scss
+++ b/src/app/layout/pages/restaurants/restaurants.component.scss
@@ -12,7 +12,7 @@
         font-family: "EB Garamond", serif;
         margin: 0;
         background-color: #fff;
-        border-bottom: 3px solid #006338;
+        border-bottom: 3px solid #b36700;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
