--- a/src/app/layout/pages/planning/planning.component.html
+++ b/src/app/layout/pages/planning/planning.component.html
@@ -18,6 +18,10 @@
       <div class="planning-date">Samedi 3 Septembre 2022</div>
       <div class="planning-content">
         <div class="planning-content-text">
+          <p style="color: #B36700; font-style: italic;">
+            <span class="zmdi zmdi-map"></span>
+            Avant la cérémonie civile, quartier libre le matin et pour le déjeuner
+          </p>
           <h3>Presbytère de Saint-Briac-sur-Mer</h3>
           <p>
             <span class="zmdi zmdi-car"></span>1h20 minutes<br/>
